--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,53 +1,7 @@
-:root {
-    --green: #00FF00;
-    --white: #FFFFFF;
-    --black: #000000;
+#data {
+    display: none;
 }
 
-body {
-    background: var(--bg);
-    color: var(--fontColor);
-    font-family: helvetica;
-}
-
-ul {
-    font-family: helvetica;
-}
-
-li {
-    list-style: circle;
-}
-
-.list {
-    list-style: square;
-}
-
-#msg {
-    font-family: monospace;
-}
-
-.btn {
-    position: absolute;
-    top: 20px;
-    left: 250px;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: none;
-    color: var(--btnFontColor);
-    background-color: var(--btnBg);
-}
-
-.light-theme {
-    --bg: var(--green);
-    --fontColor: var(--black);
-    --btnBg: var(--black);
-    --btnFontColor: var(--white);
-}
-
-.dark-theme {
-    --bg: var(--black);
-    --fontColor: var(--green);
-    --btnBg: var(--white);
-    --btnFontColor: var(--black);
+#customRange2 {
+    width: 50%;
 }
