--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,24 +1,19 @@
 {% extends './base.html' %}
 
-{% block title %}Simple website{% endblock %}
+{% block title %}MusicMatch{% endblock %}
 {% block content %}
-    <div class="light-theme">
-        <h1>Task List</h1>
-        <p id="msg">Current tasks:</p>
-        <ul>
-            <li class="list">Add visual styles</li>
-            <li class="list">Add light and dark themes</li>
-            <li>Enable switching the theme</li>
-        </ul>
+    <h1>Welcome to Music Match</h1>
+    <div id="no_data">
+        <h2>Please select your preference value</h2>
         <div>
-            <button class="btn">Dark</button>
+            <label for="customRange1" class="form-label">Value</label>
+            <input type="range" class="form-range" value="0" min="0" max="2" step="0.001" id="customRange2" oninput="this.nextElementSibling.value = this.value">
+            <output>0</output>
         </div>
-    
-        <button id="reproducir">Reproducir video</button>
-        <button id="pausar">Pausar video</button>
-        <button id="siguiente">Siguiente video</button>
-        <div id="player">
-    
-        </div>
+        <button id="create_table"> Create playlist</button>
     </div>
+    <div id="data">
+        {% include 'data_table.html' %}
+    </div>
+    {% include 'player.html' %}
 {% endblock %}
