--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
 {% block title %}MusicMatch{% endblock %}
 {% block content %}
     <h1>Welcome to Music Match</h1>
+    <a href="/doc">VIEW DOCUMENTATION</a>
     <div id="no_data">
         <h2>Please select your preference value</h2>
         <div>
