--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,12 +6,18 @@
     <a href="/doc">VIEW DOCUMENTATION</a>
     <div id="no_data">
         <h2>Please select your preference value</h2>
-        <div>
+        <form action="{{ url_for('songs') }}" method="POST" target="_blank">
+            <label for="customRange1" class="form-label">Value</label>
+            <input type="range" class="form-range" value="0" min="0" max="2" step="0.001" id="customRange2" name="preference_value" oninput="this.nextElementSibling.value = this.value">
+            <output>0</output>
+            <button type="submit">Create playlist</button>
+        </form>
+        <!--div>
             <label for="customRange1" class="form-label">Value</label>
             <input type="range" class="form-range" value="0" min="0" max="2" step="0.001" id="customRange2" oninput="this.nextElementSibling.value = this.value">
             <output>0</output>
-        </div>
-        <button id="create_table"> Create playlist</button>
+        </div-->
+        <!--button id="create_table"> Create playlist</button-->
     </div>
     <div id="data">
         {% include 'data_table.html' %}
