--- a/app/templates/data_table.html
+++ b/app/templates/data_table.html
@@ -1,6 +1,4 @@
-<h2>This is your new playlist</h2>
-
-<div>
+<div class="data_table table-responsive">
     <table class="table">
         <thead>
             <tr>
@@ -12,5 +10,3 @@
         </tbody>
     </table>    
 </div>
-
-<button type="button" class="btn btn-primary" id="make_playlist">Play</button>
