--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,18 +2,59 @@
 
 {% block title %}MusicMatch{% endblock %}
 {% block content %}
-    <h1>Welcome to Music Match</h1>
-    <div id="no_data">
-        <h2>Please select your preference value</h2>
-        <div>
-            <label for="customRange1" class="form-label">Value</label>
-            <input type="range" class="form-range" value="0" min="0" max="2" step="0.001" id="customRange2" oninput="this.nextElementSibling.value = this.value">
+<div id="no_data">
+    <h2>Please select your preference value</h2>
+    <form>
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Favorite song">
+            </div>
+            <div class="col">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Discart genres
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <li>
+                            <label class="dropdown-item">
+                                <input type="checkbox" value="opcion1"> Opción 1
+                            </label>
+                        </li>
+                        <li>
+                            <label class="dropdown-item">
+                                <input type="checkbox" value="opcion2"> Opción 2
+                            </label>
+                        </li>
+                        <li>
+                            <label class="dropdown-item">
+                                <input type="checkbox" value="opcion3"> Opción 3
+                            </label>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="range">
+            <label for="customRange1" class="form-label">Filter intensity</label>
+            <input type="range" class="form-range" value="0" min="0" max="2" step="0.001" id="customRange2"
+                oninput="this.nextElementSibling.value = this.value">
             <output>0</output>
         </div>
-        <button id="create_table"> Create playlist</button>
-    </div>
-    <div id="data">
+    </form>
+    <button  type="button" class="btn btn-primary btn-lg" id="create_table">Create playlist</button> 
+</div>
+<div id="data">
+    <h2>This is your new playlist</h2>
+    <div class="elements">
         {% include 'data_table.html' %}
+        {% include 'player.html' %}
     </div>
-    {% include 'player.html' %}
+
+    <div class="buttons">
+        <button type="button" class="btn btn-primary" id="make_playlist">Play</button>
+        <button type="button" class="btn btn-info btn-lg">See graph</button>
+        <button type="button" class="btn btn-danger btn-lg">Restart</button>
+    </div>
+</div>
 {% endblock %}
