--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -13,8 +13,6 @@ body {
 }
 
 #no_data {
-    border-style: solid;
-    border-color: rgb(119, 0, 255);
     display: flex;
     flex-direction: column;
     padding: 30px;
@@ -41,11 +39,17 @@ body {
 
 .elements {
     /* display: flex;
-    justify-content: space-around; */
+    flex-direction: column;
+    gap: 10px; */
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: center;
+}
+
+.data_table {
+    max-height: 450px;
+    overflow: auto;
 }
 
 .buttons {
@@ -63,6 +67,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     max-width: 500px;
+    max-height: 450px;
     display: flex;
     flex-direction: column;
     /* width: fit-content; */
