--- a/app/templates/data_table.html
+++ b/app/templates/data_table.html
@@ -2,8 +2,10 @@
     <table class="table">
         <thead>
             <tr>
+                <th scope="col">Id</th>
                 <th scope="col">Track</th>
-                <th scope="col">URL</th>
+                <th scope="col">Artist</th>
+                <!-- <th scope="col">URL</th> -->
             </tr>
         </thead>
         <tbody id="table_body">
