--- a/app/templates/doc.html
+++ b/app/templates/doc.html
@@ -6,7 +6,7 @@ block content %}
     <div class="back-btn">
       <a href="/">⬅️ Volver</a>
     </div>
-    <h1 class="doc-title">MUSIC MATCH DOCUMENTATION🎵</h1>
+    <h1 class="doc-title">SOURCE DOCUMENTATION🎵</h1>
   </div>
   <div class="doc-main">
     <div class="intro">
@@ -304,8 +304,11 @@ block content %}
     </div>
     <div class="example">
       <h2>6. Ejemplo de implementación</h2>
-      <p>A continuación se dará un ejemplo del uso del programa: </p>
-      <p>a. Elegir el valor de preferencia y darle click al botón <strong><i>Generate Playlist</i></strong></p>
+      <p>A continuación se dará un ejemplo del uso del programa:</p>
+      <p>
+        a. Elegir el valor de preferencia y darle click al botón
+        <strong><i>Generate Playlist</i></strong>
+      </p>
       <div class="img-container">
         <img
           src="static/img/step1.png"
@@ -313,13 +316,12 @@ block content %}
           id="graph_nodos"
         />
       </div>
-      <p>b. Se mostrará una lista de canciones con similitudes halladas por Dijkstra</p>
+      <p>
+        b. Se mostrará una lista de canciones con similitudes halladas por
+        Dijkstra
+      </p>
       <div class="img-container">
-        <img
-          src="static/img/step2.png"
-          alt="grafo con nodos"
-          width="900px"
-        />
+        <img src="static/img/step2.png" alt="grafo con nodos" width="900px" />
       </div>
     </div>
   </div>
