--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,17 +57,21 @@ content %}
 </div>
 
 <div id="data">
-  <h2>This is your new playlist</h2>
+  <h2>Enjoy your new playlist</h2>
   <div class="elements">
     {% include 'data_table.html' %} {% include 'player.html' %}
-</div>
+  </div>
 
   <div class="buttons">
-    <button type="button" class="btn btn-primary" id="make_playlist">
-      Play
-    </button>
+    <button type="button" class="btn btn-primary" id="make_playlist">Play</button>
     <button type="button" class="btn btn-info btn-lg" id="graph">See graph</button>
     <button type="button" class="btn btn-danger btn-lg" id="restart" >Restart</button>
+  </div>
+
+  <div class="view_graph" id="view_graph">  
+    <div id="graph-cont" style="text-align: center; display: none;">
+      <img src="static/img/graph_applied.png" alt="view_graph">
+    </div>
   </div>
 </div>
 
